# movie-catalog

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
catalog/: api.py  config.py  io_utils.py  logging_config.py  main_api.py  metadata.py  models.py  services.py  utils.py
catalog/api/: api.py  auth.py  enrich.py  extensions.py  import_export.py  movies.py  my_flask.py
certs/: server.crt  server.csr
tests/: test_api.py  test_auth.py  test_io_utils.py  test_jwt.py  test_metadata.py  test_models.py  test_rate_limit.py  test_rbac.py  test_utils.py
