[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["catalog"]

[project]
name = "movie-catalog"
version = "0.1.0"
description = "A Flask API to manage your movie collection"
authors = [
  { name="Younes Lesfer", email="younes.lesfer@gmail.com" }
]

requires-python = ">=3.10"
license = { text = "MIT" }

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Framework :: Flask",
  "Operating System :: OS Independent",
]

dependencies = [
  "flask>=2.2,<3.0",
  "aiohttp>=3.8",
  "flask-jwt-extended>=4.7",
  "Flask-Limiter>=3.10",
  "flask-cors>=5.0",
  "flask-talisman>=1.1",
  "Flask-Seasurf>=2.0",
  "Flask-Caching>=2.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio",
  "mypy>=1.0",
  "python-dotenv>=0.21.1"
]


[project.scripts]
movie-catalog = "catalog.api:main"


